# Browser-Agent-Dataset

./: .coverage  .gitignore  README.md  check_brouser_type.py  conftest.py  pyproject.toml  requirements.txt  run_example_workflow.py  test_google_search.py
.github/workflows/: main.yml.disabled
docs/: storage_manager.md
scripts/: prd.md  task-complexity-report.json
src/: .env.example  __init__.py  orchestrator.py
src/bad_agent_cli/: __init__.py  collect_cli.py  config.py  configure_cli.py  main.py
src/browserbase_client/: __init__.py  auth.py  client.py  config.py  exceptions.py  types.py
src/browserbase_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/data_collector/: __init__.py  collector.py  config.py  exceptions.py  storage.py  types.py
src/dataset_builder/: __init__.py  builder.py  config.py  exceptions.py  filtering.py  formatting.py  image_handler.py  splitting.py  statistics.py  types.py  utils.py
src/example_workflows/: __init__.py  form_submission.py  general_search.py  video_discovery.py
src/html_processor/: __init__.py  exceptions.py  processor.py
src/pii_scrubber/: __init__.py  config.py  exceptions.py  scrubber.py
src/stagehand_client/: __init__.py  auth.py  client.py  config.py  exceptions.py  types.py  utils.py  workflow.py
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  tasks.json
(+45 files in other folders)
